# antview

./: Makefile.am  ant.cpp  ant.hpp  ant_viewer.cpp  config.info  configure.ac  data.cpp  data.hpp  evolve_ant.cpp  primitives.cpp  primitives.hpp  santa-fe.scm  solution.scm  trail_editor.cpp  trail_parser.cpp  trail_parser.hpp
app/: ant_viewer.cpp  ant_viewer.hpp  sdl.cpp  sdl.hpp  texture_manager.cpp  texture_manager.hpp  trail_editor.cpp  trail_editor.hpp  trailedit.cpp  trailedit.hpp
tests/: ant1.cpp  trail_parser1.cpp
